# libsrvf

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README  README.md  Resample_Uniform_Increase_4.m  TODO  configure.ac  dp.m  dp_grid.c  dp_grid.h  dp_mex.c  dp_nbhd.h  isClosedCurve.m  ismonotone.m  libsrvf.pyx  plf_arclength.m  plf_compose.m  plf_evaluate.m  plf_inverse.m  plf_preimages.m  plf_sum.m  plf_to_srvf.m  plot_geodesic.m  plot_plf.m  plot_registration.m  plot_srvf.m  poly_to_plf.m  preprocess.m  quick_test.py  samps_to_plf.m  setup.py  srvf_evaluate.m  srvf_gamma_action.m  srvf_geodesic.m  srvf_l2product.m  srvf_linear_combination.m  srvf_optimal_matching.m  (+7 more)
aux/: run_with_ldpath.sh
cpp/: Makefile.am  README  configure.ac
cpp/demos/: Makefile.am  configure.ac
cpp/demos/partial_match/: configure.ac
cpp/demos/partial_match/src/: Makefile  Makefile.am  main.cc  partialmatch.cc  partialmatch.h
cpp/demos/pmatch/: configure.ac
cpp/demos/pmatch-gui/: configure.ac
cpp/demos/pmatch-gui/src/: Makefile.am  main.cc  matchview.h  ui.cc  ui.fl
cpp/demos/pmatch/src/: Makefile.am  main.cc  matchview.h  ui.cc  ui.fl  ui.h
cpp/demos/shapedist/src/: Makefile.am  shapedist.cc
cpp/fa/: Makefile.am  configure.ac
cpp/fa/src/: Makefile.am
cpp/fa/tests/: Makefile.am
cpp/io/: configure.ac
cpp/matlab/: plf_arclength.m  plf_refine.m  plf_sum.m  poly_resample.m
cpp/plot/: configure.ac  plotwin.cc
cpp/plot/src/: Makefile.am  plot.cc  plot.h  plothelper.cc  plothelper.h  plotwin.cc  plotwin.h  render.cc  render.h
cpp/pmatch/: Makefile.am  configure.ac
cpp/pmatch/src/: Makefile  Makefile.am  paretoset.h  partialmatch.cc  partialmatch.h  pmatch_util.cc  pmatch_util.h  rotselect.cc  rotselect.h
cpp/pmatch/tests/: Makefile.am  partialmatch_tests.cc
cpp/src/: Makefile.am  dpnbhd.cc  dpnbhd.h  fileio.cc  fileio.h  functions.cc  functions.h  interp.cc  interp.h  matrix.cc  matrix.h  numeric.h  opencurves.cc  opencurves.h  partialmatch.cc  plf.cc  plf.h  plot.cc  plot.h  plotwin.cc  plotwin.h  point.h  pointset.h  qmap.cc  render.cc  render.h  reparam.cc  reparam.h  rotate.cc  rotate.h  rotselect.cc  srvf.cc  srvf.h  util.cc  util.h
cpp/srvf/: configure.ac
cpp/srvf/src/: Makefile.am  dpnbhd.cc  dpnbhd.h  exceptions.h  fileio.cc  fileio.h  functions.cc  functions.h  interp.h  kdtree.h  matrix.cc  matrix.h  minmaxheap.h  opencurves.cc  opencurves.h  paretoset.h  plf.cc  plf.h  point.h  pointset.h  qmap.cc  qmap.h  reparam.cc  reparam.h  rotate.cc  rotate.h  srvf.cc  srvf.h  util.cc  util.h
cpp/srvf/tests/: Makefile.am  function_tests.cc  kdtree_tests.cc  minmaxheap_tests.cc  opencurves_tests.cc  partialmatch_tests.cc  plf_tests.cc  plot_tests.cc  plotwin_tests.cc  reparam_tests.cc  rotate_tests.cc  util_tests.cc
cpp/tests/: Makefile.am  configure.ac  fileio_tests.cc  function_tests.cc  interp_tests.cc  matrix_tests.cc  numeric_tests.cc  opencurves_tests.cc  plf_tests.cc  plot_tests.cc  plotwin_tests.cc  point_tests.cc  pointset_tests.cc  qmap_tests.cc  render_tests.cc  reparam_tests.cc  srvf_tests.cc  util_tests.cc
cpp/tests/src/: Makefile.am  function_tests.cc  interp_tests.cc  plf_tests.cc  pointset_tests.cc
demos/pmatch-gui/src/: Makefile.am
demos/shapedist/src/: Makefile.am
include/srvf/: c_api.h
matlab/: Makefile  plf_compose.m  plf_evaluate.m  plf_inverse.m  plf_preimages.m  plf_restrict.m  plf_to_samps.m  plf_to_srvf.m  plf_trans_to_origin.m  plot_geodesic.m  plot_plf.m  plot_registration.m  sphere_karcher_mean.m  srvf_evaluate.m  srvf_fa_groupwise_reparam.cc  srvf_fa_optimal_reparam.cc  srvf_gamma_action.m  srvf_geodesic.m  srvf_l2product.m  srvf_make_alternating.m  srvf_optimal_reparam.cc  srvf_optimal_rotation.m  srvf_pmatch_demo.m  srvf_pmatch_find_matches.cc  srvf_pmatch_select_single.m  srvf_refine.m  srvf_restrict.m  srvf_squared_l2norm.m  srvf_to_samps.m  updown_sequence.m
matlab/demos/: srvf_fa_groupwise_reparam_demo.m  srvf_fa_optimal_reparam_demo.m
matlab/operatornew/: newdelete.h
oct/: Makefile  plot_registration.m  plot_srvf.m  poly_arclength_params.m  poly_to_plf.m  sphere_covariance.m  sphere_shooting_vector.m  srvf_optimal_rotation.m  srvf_preshape_distance.m  srvf_squared_l2distance.m  srvf_to_plf.m
oct/tests/: Makefile
plot/: plot.cc  plothelper.cc  render.cc
src/: CMakeLists.txt  Makefile.am  c_api.cc  rotate.cc
srvf/: Makefile.am  exceptions.h
tests/: CMakeLists.txt  dp_grid_tests.c  function_tests.cc  interp_tests.cc  matrix_tests.cc  opencurves_tests.cc  plf_tests.cc  plot_tests.cc  plotwin_tests.cc  rotate_tests.cc
