lib_LIBRARIES=libsrvf.a

include_HEADERS=exceptions.h fileio.h functions.h interp.h matrix.h plf.h plot.h plotwin.h pointset.h qmap.h render.h reparam.h rotate.h opencurves.h srvf.h util.h

libsrvf_a_SOURCES=fileio.cc functions.cc interp.cc matrix.cc plf.cc plot.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc opencurves.cc srvf.cc util.cc
