lib_LIBRARIES=libsrvf.a

srvf_includedir=$(includedir)/srvf

srvf_include_HEADERS=exceptions.h fileio.h functions.h interp.h matrix.h numeric.h opencurves.h plf.h plot.h plotwin.h point.h pointset.h qmap.h render.h reparam.h rotate.h srvf.h util.h

libsrvf_a_SOURCES=fileio.cc functions.cc interp.cc matrix.cc opencurves.cc plf.cc plot.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc srvf.cc util.cc
