bin_PROGRAMS=test
AM_CPPFLAGS=-I $(top_srcdir)/src
AM_LDFLAGS=-L $(top_srcdir)/src
LIBS+=-lsrvf -lboost_test_exec_monitor
test_SOURCES=fileio_tests.cc interp_tests.cc main.cc matrix_tests.cc plf_tests.cc plot_tests.cc plotwin_tests.cc pointset_tests.cc qmap_tests.cc render_tests.cc reparam_tests.cc rotate_tests.cc opencurves_tests.cc srvf_tests.cc util_tests.cc
